<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012-2013 Trento RISE
  
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
         http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_uid_label">SmartCampus</string>
    <string name="app_name">android.smartcampus.template</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="tv_data">User Data</string>
    <string name="tv_from_basic_profile">From basic profile:</string>
    <string name="tv_user_id">User ID</string>
    <string name="tv_from_ac_service">From AC service:</string>
    <string name="tv_attributes">Attributes</string>
    <string name="tv_from_profile_service">From profile service:</string>
    <string name="tv_name">Name</string>
    <string name="title_activity_file">FileActivity</string>
    <string name="remote_file_storage_demo_label">Remote file storage demo</string>
    <string name="photo_btn_label">Upload a photo!</string>
    <string name="social_demo_label">Social service demo</string>
    <string name="territory_demo_label">Territory service demo</string>
    <string name="mobility_demo_label">Mobility service demo</string>
    
	<string name="empty" />
    <string name="add">Add</string>
    <string name="no_items">No items found</string>

    <string name="user_mp_more">&#8230;</string>
    <string name="user_mp_more_new">+</string>
    <string name="mygroups_add">Add group</string>
    <string name="mygroups_add_title">Add new group</string>
    <string name="mygroups_add_person_title">Add new person</string>
    <string name="mygroups_add_hint">New group</string>
    <string name="mygroups_delete">Delete</string>
    <string name="mygroups_delete_title">Delete group</string>
    <string name="mygroups_delete_hint">Delete group</string>
    <string name="mygroups_rename">Rename</string>
    <string name="mygroups_rename_title">Rename group</string>
    <string name="mygroups_rename_hint">Rename group</string>
    
    <string name="mygroups_addto_options_title">Add to My Groups</string>
    <string name="people_hint_name">Search</string>
    <string name="people_search_desc">Search people by name</string>
    
    <string name="mygroups_name_empty">Group name cannot be empty</string>
    <string name="mygroups_name_duplicate">Group with this name already exists</string>
    
    <string name="content_empty">No items.</string>
    <string name="people_list_empty">No people here!</string>
    
    <string name="a_campus">Campus</string>
    <string name="a_groups">My groups</string>
    <string name="groups_title">Groups</string>
    <string name="campus_title">Campus</string>

    <!-- Mobility strings -->
    <string name="mobility_plan_from">Start</string>
    <string name="mobility_plan_to">Destination</string>
    <string name="mobility_plan_when">Date and time</string>
    <string name="mobility_plan_preferences">Preferences</string>
    <string name="mobility_plan_placeholder">Address&#8230;</string>
    <string name="mobility_plan_search">Search</string>
    <string name="mobility_plan_wait_location">Location not found yet. Try again in a while&#8230;</string>
    
    <string name="logout">Logout</string>
    
        <!-- territory string -->
    <string name="categories_event_generic">Other</string>

    <!-- Transport types -->
    <string name="ttype_transit">Transit</string>
    <string name="ttype_car">Car</string>
    <!-- <string name="ttype_bicycle">Bike</string> -->
    <!-- <string name="ttype_sharedbike">Shared bike</string> -->
    <!-- <string name="ttype_sharedbike_wo_station">Shared bike without station</string> -->
    <!-- <string name="ttype_sharedbike_wo_station">Shared bike</string> -->
    <!-- <string name="ttype_car_w_parking">Car with parking</string> -->
    <!-- <string name="ttype_sharedcar">Shared car</string> -->
    <!-- <string name="ttype_sharedcar_wo_station">Shared car without station</string> -->
    <!-- <string name="ttype_sharedcar_wo_station">Shared car</string> -->
    <!-- <string name="ttype_bus">Bus</string> -->
    <!-- <string name="ttype_train">Train</string> -->
    <string name="ttype_walk">Walking</string>
    <!-- <string name="ttype_gondola">Gondola</string> -->
    <!-- <string name="ttype_shuttle">Shuttle</string> -->


    <!-- Leg strings -->
    <string name="leg_from">from</string>
    <string name="leg_to">to</string>
    <string name="leg_bike_pick_up">pick up a bike at</string>
    <string name="leg_bike_leave">leave the bike at</string>
    <string name="leg_car_pick_up">pick up a car at</string>
    <string name="leg_car_leave">leave the car at</string>
    <string name="leg_bus_line">line</string>
    <string name="leg_train">train</string>
    <string name="leg_move">Move</string>
    <string name="leg_delay">There is a delay:</string>
    
	<!-- territory string -->
	<string name="categories_event_generic">Other</string>
</resources>
