<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:orientation="vertical" >

    <!-- FROM -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mobility_tv_from_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mobility_plan_from"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/mobility_ll_from_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <!-- android:background="@android:color/transparent" -->

            <ImageButton
                android:id="@+id/mobility_btn_from_pos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/empty"
                android:src="@drawable/ic_position" />

            <ImageButton
                android:id="@+id/mobility_btn_from_map"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/empty"
                android:src="@drawable/ic_menu_map_dark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mobility_ll_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/mobility_tv_from_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/mobility_btn_from_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/empty"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />
        </LinearLayout>
    </LinearLayout>

    <!-- TO -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mobility_tv_to_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mobility_plan_to"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/mobility_ll_to_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/mobility_btn_to_pos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/empty"
                android:src="@drawable/ic_position" />

            <ImageButton
                android:id="@+id/mobility_btn_to_map"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/empty"
                android:src="@drawable/ic_menu_map_dark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mobility_ll_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/mobility_tv_to_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/mobility_btn_to_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/empty"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />
        </LinearLayout>
    </LinearLayout>

    <!-- TIMING -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mobility_tv_when_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mobility_plan_when"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/mobility_ll_when"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/mobility_tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:inputType="date" />

            <EditText
                android:id="@+id/mobility_tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:inputType="time" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/mobility_btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mobility_plan_search" />

</LinearLayout>